--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.collab-proxy": "1.17.2",
     "com.unity.collections": "1.2.4",
     "com.unity.feature.2d": "1.0.0",
+    "com.unity.feature.characters-animation": "1.0.0",
     "com.unity.ide.rider": "3.0.15",
     "com.unity.ide.visualstudio": "2.0.16",
     "com.unity.ide.vscode": "1.2.5",
@@ -14,7 +15,6 @@
     "com.unity.render-pipelines.universal": "12.1.7",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.4",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualeffectgraph": "12.1.7",
     "com.unity.visualscripting": "1.7.8",
