made lose screen look better, stats aren't assigned correctly though

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -54,9 +54,16 @@
     },
     "cSpell.words": [
       "Collidable",
+      "DDOL",
+      "Dont",
+      "Initalize",
+      "interactable",
       "Lague's",
+      "Leaderboard",
       "Lerp",
       "Mathf",
-      "raycast"
+      "raycast",
+      "Raycasts",
+      "UGUI"
     ]
 }
