fixed guns probably and started item selection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,7 @@
     "cSpell.words": [
       "Collidable",
       "DDOL",
+      "debuff",
       "Dont",
       "Initalize",
       "interactable",
